# guiferviz.github.io

./: .gitignore  .gitmodules  404.html  CNAME  README.md  _config.yml  about.md  feed.xml  index.html  mkdocs.yaml  pyproject.toml  run_server.sh  sitemap.xml  tags.md  uranium.md
.github/workflows/: cicd.yaml
_drafts/: 2020-04-11-uranium-02-ir-generation.md  2020-04-12-uranium-03-ir-generation.md  2020-04-13-uranium-04-ir-generation.md  2020-04-14-uranium-05-flex.md
_includes/: footer.html  head.html  header.html  lib-loader.html  social-me.html  social-share.html
_layouts/: post.html  slides.html
_plugins/: difficulties.rb  render_time.rb
_posts/: 2017-09-23-hello-world.md  2018-10-18-mle-parte1.md  2018-10-18-mle-parte2.md  2019-08-29-hello-world.md  2020-01-25-week-04.md  2020-01-25-week-05.md  2020-01-26-week-04.md  2020-01-27-euler-phi-function.md  2020-01-27-reservoir-sampling.md  2020-01-31-euler-phi-function.md  2020-02-02-week-05.md  2020-04-08-week-15.md  2020-04-09-uranium-00-introduction.md  2020-04-09-uranium-00-motivations.md  2020-04-10-uranium-01-compiling-llvm.md  2020-04-12-week-15.md  2020-04-19-week-16.md  2020-04-21-uranium-01-devenv.md  2020-04-26-week-17.md
_sass/: _base.scss  _layout.scss
about/: index.html
assets/images/: 2020_04_09_ast.graphml  2020_04_09_compiler_in_out.graphml  2020_04_09_compiler_phases_llvm.graphml  (+3 more)
best_practices/: index.html
css/: highlighting-github.css  main.scss  tango.css
docs/: CNAME  about.md  index.md
old/: run_jupyter.sh  run_server.sh  tags.md
search/: search_index.json
tags/: index.html
(+40 files in other folders)
