[tool.poetry]
name = "guiferviz"
version = "0.1.0"
description = ""
authors = ["Guiferviz <guiferviz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.2.9"
mkdocs-jupyter = "^0.20.1"
mkdocs-pdf-export-plugin = "^0.5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
