[tool.poetry]
name = "guiferviz"
version = "0.1.0"
description = ""
authors = ["Guiferviz <guiferviz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^8.5.10"
mkdocs-jupyter = "^0.20.1"
mkdocs-pdf-export-plugin = "^0.5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
